testing/macro-tests/tests/ui/store_unknown_storage_mode.stderr
error: unknown store storage mode; expected storage(stable(...)) or storage(heap())
  --> tests/ui/store_unknown_storage_mode.rs:10:13
   |
10 |     storage(memory())
   |             ^^^^^^
